--- a/style/style.scss
+++ b/style/style.scss
@@ -9,10 +9,26 @@
 
 @import "_shopwide.scss";
 
+html::-webkit-scrollbar{
+    width: 10px;
+}
+
+html::-webkit-scrollbar-thumb{
+    background-color: #233a95;
+    border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:hover{
+    background-color: #2BBEF9;
+}
+
+html::-webkit-scrollbar-track{
+    background-color: #FFFFFF;
+}
+
 body{
     font-family: 'Inter', sans-serif;
     background-color: #FFFFFF;
-
 }
 
 #slayder{
@@ -203,6 +219,8 @@ body{
                     span{
                         font-size: 16px;
                         margin: 0 4px;
+                        font-weight: bold;
+                        color: #ed174a;
                     }
                     .box{
                         font-family: 'Dosis', sans-serif;
@@ -213,6 +231,7 @@ body{
                         width: 3rem;
                         height: 3rem;
                         border-radius: 7px;
+                        color: #FFFFFF;
                         background-color: #ed174a;
                     }
                     
