--- a/style/_responsive.scss
+++ b/style/_responsive.scss
@@ -19,6 +19,10 @@
         display: block !important;
     }
 
+    #mobilefotternav{
+        display: block !important;
+    }
+
     #mobileheader{
         display: block !important;
     }
@@ -31,6 +35,7 @@
         .slayder-index{
 
             img{
+                object-fit: cover;
                 border-radius: 10px;
                 width: 100% !important;
                 height: 300px !important;
@@ -362,6 +367,36 @@
 
     //Shop Wide
 
+    .mobilimg{
+        display: block !important;
+        position: relative;
+        .textimgcontent{
+            position: absolute;
+            top: 30%;
+            left: 25%;
+            h6{
+            font-weight: 300;  
+            }
+            p{
+                font-size: 10px;
+                font-weight: bold;
+                span{
+                    color: green;
+                    margin: 0 !important;
+                    padding: 0 !important;
+                }
+            }
+            #textcontentbottom{
+                font-size: 10px;
+                color: gainsboro;
+            }
+        }
+
+        img{
+            width: 100%;
+        }
+    }
+
     #shopmain{
         .filterbar{
             display: none!important;
@@ -374,17 +409,20 @@
         .productbox{
             .products{
                 .carts{
+                    width: 50% !important;
+                    .main{
+                        height: 360px !important;   
+                    }
                     .hover{
                         opacity: 1 !important;
                         visibility: visible !important;
-                        bottom: 15px !important;
+                        bottom: 5px !important;
                         background-color: transparent !important;
                         button{
                             padding: 5px 40px !important;
                         }
                     }
 
-                    width: 50% !important;
                 }
             }
         }
