--- a/style/style.css
+++ b/style/style.css
@@ -268,6 +268,66 @@
   #productbest {
     display: none !important;
   }
+  #product .prodactinfo .ptop h1 {
+    font-size: 17px !important;
+  }
+  #product .prodactinfo .ptop .productinfo {
+    width: 100% !important;
+  }
+  #product .prodactinfo .ptop .productinfo .brands {
+    display: block !important;
+  }
+  #product .prodactinfo .ptop .productinfo .starts {
+    width: 70% !important;
+    display: block !important;
+    border: none !important;
+  }
+  #product .prodactinfo .ptop .productinfo .sku {
+    display: none !important;
+  }
+  #product .prodactinfo .pbottom .main .pbleft {
+    display: block !important;
+    width: 100% !important;
+  }
+  #product .prodactinfo .pbottom .main .pbleft .countercart {
+    width: 100%;
+    text-align: center;
+  }
+  #product .prodactinfo .pbottom .main .pbleft .countercart button {
+    margin-top: 20px !important;
+    margin: 20px auto !important;
+    display: block !important;
+  }
+  #product .prodactinfo .pbottom .main .pbleft .favoris .favoriticons {
+    width: 100% !important;
+    display: block !important;
+  }
+  #product .prodactinfo .pbottom .main .pbleft .favoris .compare {
+    display: block !important;
+  }
+  #product .prodactinfo .pbottom .main .pbleft .social i {
+    padding: 8px 8px !important;
+  }
+  #product .prodactinfo .pbottom .main .pbright {
+    width: 100% !important;
+  }
+  #product .prodactinfo .pbottom .main .pbright .top {
+    width: 100% !important;
+  }
+  .cartproduct .contentbasketbox {
+    display: block !important;
+  }
+  .cartproduct .basketbox {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
+  .cartproduct .basketbox .productimg img {
+    width: 10% !important;
+  }
+  .cartproduct .basketbox .productname h3 {
+    display: inline;
+  }
 }
 
 .covid {
@@ -882,7 +942,7 @@
   -webkit-transition: 0.3s;
   transition: 0.3s;
   text-decoration: none;
-  font-weight: 600;
+  font-weight: bold;
   font-size: 15px;
   color: rgba(0, 0, 0, 0.6);
   padding: 40px 0;
@@ -1141,10 +1201,9 @@
   visibility: hidden;
   width: 0%;
   z-index: 111111;
-  opacity: 0;
   overflow-y: scroll;
-  -webkit-transition: 0.8s;
-  transition: 0.8s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   height: 100vh;
   position: fixed;
   left: 0;
@@ -2460,8 +2519,6 @@ nav ul li #main::after {
 #shopmain .productbox .products .carts .main {
   overflow: hidden;
   position: relative;
-  -webkit-transition: 0.7s;
-  transition: 0.7s;
   border: 1px solid #edeef5;
 }
 
@@ -2581,8 +2638,6 @@ nav ul li #main::after {
   text-align: center;
   position: absolute;
   bottom: -50px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
   width: 100%;
   background-color: #fff;
   padding-bottom: 10px;
@@ -2618,8 +2673,6 @@ nav ul li #main::after {
   bottom: -20px;
   visibility: visible;
   opacity: 1;
-  -webkit-transition: 0.1s;
-  transition: 0.1s;
   border-radius: 0 0 10px 10px;
   border-bottom: 1px solid #c2c2d3;
   border-left: 1px solid #c2c2d3;
@@ -2670,8 +2723,6 @@ nav ul li #main::after {
 #productbest .cartsbox .carts .main {
   overflow: hidden;
   position: relative;
-  -webkit-transition: 0.7s;
-  transition: 0.7s;
   border: 1px solid #edeef5;
 }
 
@@ -2791,8 +2842,6 @@ nav ul li #main::after {
   text-align: center;
   position: absolute;
   bottom: -50px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
   width: 100%;
   background-color: #fff;
   padding-bottom: 10px;
@@ -2828,8 +2877,6 @@ nav ul li #main::after {
   bottom: -20px;
   visibility: visible;
   opacity: 1;
-  -webkit-transition: 0.1s;
-  transition: 0.1s;
   border-radius: 0 0 10px 10px;
   border-bottom: 1px solid #c2c2d3;
   border-left: 1px solid #c2c2d3;
@@ -2866,27 +2913,37 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
   padding: 10px 0;
 }
 
-#product .prodactinfo .ptop .productinfo P {
+#product .prodactinfo .ptop .productinfo p {
+  margin: 0 0 !important;
+}
+
+#product .prodactinfo .ptop .productinfo .brands {
+  width: 33%;
   margin: 0 0 !important;
   color: #3E445A;
   font-size: 12px;
 }
 
-#product .prodactinfo .ptop .productinfo P span {
+#product .prodactinfo .ptop .productinfo .brands span {
   color: #9B9BB4;
   font-size: 12px;
 }
 
 #product .prodactinfo .ptop .productinfo .starts {
+  width: 33%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 0 10px;
   margin: 0 20px;
   border-left: 1px solid #edeef5;
@@ -2906,6 +2963,12 @@ body {
   font-weight: bold;
   color: #71778E;
   text-decoration: none;
+}
+
+#product .prodactinfo .ptop .productinfo .sku {
+  text-align: center;
+  color: #9B9BB4;
+  font-size: 12px;
 }
 
 #product .prodactinfo .pbottom .productimgslider img {
@@ -3546,6 +3609,86 @@ body {
   background-color: #ffffff;
 }
 
+.cartproduct {
+  margin: 50px 0;
+}
+
+.cartproduct .contentbasketbox h3 {
+  font-size: 15px;
+  color: #c2c2d3;
+}
+
+.cartproduct #list .basketbox {
+  border-top: 1px solid #c2c2d398;
+  border-bottom: 1px solid #c2c2d398;
+}
+
+.cartproduct #list .basketbox h3 {
+  font-size: 15px;
+}
+
+.cartproduct #list .basketbox .productimg img {
+  width: 100%;
+}
+
+.cartproduct #list .basketbox .productprice {
+  opacity: 0.5;
+}
+
+.cartproduct #list .basketbox .quality #minus, .cartproduct #list .basketbox .quality #plus {
+  padding: 4px 8px;
+  background-color: #EDEEF5;
+  border-radius: 100%;
+  cursor: pointer;
+}
+
+.cartproduct #list .basketbox .quality #minus i, .cartproduct #list .basketbox .quality #plus i {
+  font-size: 14px;
+  color: black;
+}
+
+.cartproduct #list .basketbox .quality #count {
+  margin: 0 8px;
+}
+
+.cartproduct .totalpricebox {
+  margin-top: 15px;
+  border: 1px solid red;
+  border-radius: 20px;
+  padding: 40px;
+}
+
+.cartproduct .totalpricebox .tphead {
+  border-bottom: 1px solid grey;
+}
+
+.cartproduct .totalpricebox .tbsubtotal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px 0;
+  border-bottom: 1px solid grey;
+}
+
+.cartproduct .totalpricebox .tbsubtotal .tbsub {
+  text-align: start;
+  width: 50%;
+}
+
+.cartproduct .totalpricebox .tbsubtotal .tbsubpri {
+  text-align: end;
+  width: 50%;
+}
+
+.cartproduct button {
+  margin-top: 20px;
+  padding: 15px 30px;
+  border: none;
+  background-color: red;
+  color: #FFFFFF;
+  border-radius: 20px;
+}
+
 html::-webkit-scrollbar {
   width: 10px;
 }
@@ -3942,8 +4085,6 @@ body {
 #saleproducts .elementsboxs .carts .main {
   overflow: hidden;
   position: relative;
-  -webkit-transition: 0.7s;
-  transition: 0.7s;
   border: 1px solid #edeef5;
 }
 
@@ -4063,8 +4204,6 @@ body {
   text-align: center;
   position: absolute;
   bottom: -50px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
   width: 100%;
   background-color: #fff;
   padding-bottom: 10px;
@@ -4100,8 +4239,6 @@ body {
   bottom: -20px;
   visibility: visible;
   opacity: 1;
-  -webkit-transition: 0.1s;
-  transition: 0.1s;
   border-radius: 0 0 10px 10px;
   border-bottom: 1px solid #c2c2d3;
   border-left: 1px solid #c2c2d3;
@@ -4240,8 +4377,6 @@ body {
 
 #bestsellers .productslayder .carts {
   width: 100%;
-  -webkit-transition: 0.7s;
-  transition: 0.7s;
   border: 1px solid #edeef5;
   position: relative;
   overflow: hidden;
@@ -4432,8 +4567,6 @@ body {
 #products .productsallbox .carts .main {
   overflow: hidden;
   position: relative;
-  -webkit-transition: 0.7s;
-  transition: 0.7s;
   border: 1px solid #edeef5;
 }
 
@@ -4553,8 +4686,6 @@ body {
   text-align: center;
   position: absolute;
   bottom: -50px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
   width: 100%;
   background-color: #fff;
   padding-bottom: 10px;
@@ -4590,8 +4721,6 @@ body {
   bottom: -20px;
   visibility: visible;
   opacity: 1;
-  -webkit-transition: 0.1s;
-  transition: 0.1s;
   border-radius: 0 0 10px 10px;
   border-bottom: 1px solid #c2c2d3;
   border-left: 1px solid #c2c2d3;
@@ -4705,5 +4834,35 @@ body {
   font-size: 14px;
   font-weight: 500;
   color: #202435;
+}
+
+#notification {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  position: fixed;
+  bottom: 20px;
+  right: 0;
+}
+
+#notification .nmain {
+  border-radius: 10px;
+  width: 77%;
+  height: 90px;
+  background-color: #00b853;
+  padding: 10px;
+}
+
+#notification .nmain span {
+  font-size: 15px;
+  color: #ffffff;
+}
+
+#notification .nmain a {
+  display: block;
+  width: 100%;
+  color: #FFFFFF;
+  margin-left: 10px;
 }
 /*# sourceMappingURL=style.css.map */
