--- a/style/style.scss
+++ b/style/style.scss
@@ -11,6 +11,8 @@
 
 @import "_productdetails.scss";
 
+@import "_basket.scss";
+
 html::-webkit-scrollbar{
     width: 10px;
 }
@@ -396,7 +398,6 @@ body{
             .main{
                 overflow: hidden;
                 position: relative;
-                transition: 0.7s;
                 border: 1px solid #edeef5;
                 .contentimg{
                     padding: 20px;
@@ -518,7 +519,6 @@ body{
                 text-align: center;
                 position: absolute;
                 bottom: -50px;
-                transition: 0.5s;
                 width: 100%;
                 background-color: #fff;
                 padding-bottom: 10px;
@@ -552,7 +552,6 @@ body{
                     bottom: -20px;
                     visibility: visible;
                     opacity: 1;
-                    transition: 0.1s;
                     border-radius:0 0 10px 10px;
                     border-bottom: 1px solid #c2c2d3;
                     border-left: 1px solid #c2c2d3;
@@ -710,7 +709,6 @@ body{
 
         .carts{
             width: 100%;
-            transition: 0.7s;
             border: 1px solid #edeef5;
             position: relative;
             overflow: hidden;
@@ -893,7 +891,6 @@ body{
             .main{
                 overflow: hidden;
                 position: relative;
-                transition: 0.7s;
                 border: 1px solid #edeef5;
                 .contentimg{
                     padding: 20px;
@@ -1015,7 +1012,6 @@ body{
                 text-align: center;
                 position: absolute;
                 bottom: -50px;
-                transition: 0.5s;
                 width: 100%;
                 background-color: #fff;
                 padding-bottom: 10px;
@@ -1049,7 +1045,6 @@ body{
                     bottom: -20px;
                     visibility: visible;
                     opacity: 1;
-                    transition: 0.1s;
                     border-radius:0 0 10px 10px;
                     border-bottom: 1px solid #c2c2d3;
                     border-left: 1px solid #c2c2d3;
@@ -1184,6 +1179,33 @@ body{
         }
 
     }
+}
+
+#notification{
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    position: fixed;
+    bottom: 20px;
+    right: 0;
+    .nmain{
+        border-radius: 10px;
+        width: 77%;
+        height: 90px;
+        background-color: #00b853;  
+        padding: 10px;
+        span{
+            font-size: 15px;
+            color: #ffffff;
+
+        }
+        a{  
+            display: block;
+            width: 100%;
+            color: #FFFFFF;
+            margin-left: 10px;
+        }
+    }   
 }
 
 
