--- a/style/_basket.scss
+++ b/style/_basket.scss
@@ -1,5 +1,41 @@
 
 
+
+.emptybasket{
+    text-align: center;
+    padding: 40px;
+    margin: 100px;   
+    .text{
+        margin: 40px;
+
+    }
+    .icons{
+        margin: 40px 0;
+        i{
+            font-size: 100px;
+            color: #F04652;
+            padding: 40px 45px 40px 40px;
+            background-color: #d5d5e0;
+            border-radius: 100%;
+        }
+    }
+    .bottom{
+         margin: 40px 0 0 0;
+
+         a{
+            color: #fff;
+            border-radius: 30px;
+            font-size: 15px;
+            font-weight: bold;
+            border: none;
+            padding: 20px 70px;
+            background-color: #233a95;
+            border: 1px solid #233a95;
+         }   
+    }
+}
+
+
 .cartproduct{
 
     margin: 50px 0;
@@ -20,6 +56,7 @@
 
             border-top: 1px solid #c2c2d398;
             border-bottom: 1px solid #c2c2d398;
+            align-items: center;
 
             h3{
                 font-size: 15px;
@@ -50,6 +87,15 @@
                     margin: 0 8px;
                 }
 
+            }
+
+            .removesicons{
+                i{
+                    font-size: 15px;
+                    color: #F04652;
+                    font-weight: bold;
+                    cursor: pointer;
+                }
             }
     
     
@@ -94,5 +140,21 @@
 
     }
 
+}
+
+#undo{
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s;
+    right: 20px;
+    bottom: 10px;
+    color: #fff;
+    border-radius: 25px;
+    font-size: 13px;
+    border: none;
+    padding: 5px 70px;
+    background-color: #233a95;
+    border: 1px solid #233a95;
 }
 
