--- a/style/_responsive.scss
+++ b/style/_responsive.scss
@@ -520,6 +520,16 @@
 
     //Basket
 
+    .emptybasket{
+        width: 100%;
+        display: block !important;
+        margin: 0 0 !important;
+
+        
+
+
+    }
+
     .cartproduct{
 
         .contentbasketbox{
